# VoxelTechDemo

./: .gitignore  Block.cs  BlockIds.cs  Blocks.cs  Cargo.toml  Chunk.cs  CustomEffect.cs  FrameCounter.cs  Game1.cs  OpenSimplex2.cs  Program.cs  README.md  UserInterface.cs  UserSettings.cs  VoxelRenderer.cs  VoxelTechDemo.csproj  VoxelTechDemo.sln  World.cs  app.manifest  player.cs
Benchmark/: Benchmark.csproj  GenBenchmark.cs  Program.cs
Content/: Content.mgcb  CustomEffect.fx  FluidEffect.fx
src/: Blocks.cs  Chunk.cs  CustomEffect.cs  Game1.cs  Light.cs  ListExtensions.cs  Player.cs  Program.cs  SaveFile.cs  TerrainGen.cs  UserInterface.cs  UserSettings.cs  VoxelRenderer.cs  VoxelTechDemo.csproj  World.cs  camera.rs  lib.rs  main.rs  model.rs  open_simplex.rs  player.cs  resources.rs  shader.wgsl  texture.rs
src/Content/: CloudEffect.fx  CloudEffect.mgfx  Content.mgcb  CustomEffect.fx  CustomEffect.mgfx  FluidEffect.fx
